--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
 
 
         </div>
-        <div class="progress header-right">
+        <label class="non-mobile" for="header-right">Rank: Full Stack
+        <div class="progress header-right non-mobile">
+
             <div class="progress-bar" style="width:70%"> 70% </div>
+        </div>
+    </label>
+        <div class="profile non-mobile">
+            <img width="50" height="50" src="./images/logo.png" alt="" srcset="">
         </div>
 
     </nav>
