--- a/index.html
+++ b/index.html
@@ -56,6 +56,58 @@
 
     </nav>
 
+    <div class="main container-fluid">
+        <div class="row list-box-cat p-3 mt-2">
+            <div class="col col-sm">
+
+                <div class="card bg-info flip-card">
+                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Title</h5>
+                        <p class="card-text">Content</p>
+                    </div>
+                    <div class="card card-back">
+                        <div class="card-body">
+                            <p>Los Angeles is in a large basin boundedas high as 10,000 feet (3,000 m) on the others. The city proper, which covers about 469 square miles (1,210 km2) is the seat of Los Angeles estimated population of 18.7 million.</p>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col col-sm">
+                <div class="card bg-info">
+                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Title</h5>
+                        <p class="card-text">Content</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col col-sm">
+                <div class="card bg-info">
+                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Title</h5>
+                        <p class="card-text">Content</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-sm">
+                <div class="card bg-info">
+                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Title</h5>
+                        <p class="card-text">Content</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
 
 
 </body>
