--- a/index.html
+++ b/index.html
@@ -62,51 +62,75 @@
     </nav>
 
     <div class="main container-fluid">
-        <div class="row list-box-cat p-3 mt-2">
-            <div class="col col-sm">
+        <div class="row list-box-cat pt-5 mt-5">
+            <div class=" item-col col col-md-3 col-sm-6">
 
-                <div class="card bg-info flip-card">
-                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Title</h5>
-                        <p class="card-text">Content</p>
-                    </div>
-                    <div class="card card-back">
+                <div class="card card-flip h-25">
+                    <div class="card-front text-white bg-dark">
                         <div class="card-body">
-                            <p>Los Angeles is in a large basin boundedas high as 10,000 feet (3,000 m) on the others. The city proper, which covers about 469 square miles (1,210 km2) is the seat of Los Angeles estimated population of 18.7 million.</p>
+                            <img src="./images/post-avt.jpg" alt="" class="w-100 h-50">
+                            <h5 class="card-title">Dịch vụ</h5>
                         </div>
-
-
+                    </div>
+                    <div class="card-back bg-white">
+                        <div class="card-body">
+                            <p class="card-text">content on the back!</p>
+                            <a href="#" class="btn btn-outline-secondary">Action</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col col-sm">
-                <div class="card bg-info">
-                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Title</h5>
-                        <p class="card-text">Content</p>
+            <div class="item-col col col-md-3 col-sm-6">
+                <div class="card card-flip h-25">
+                    <div class="card-front text-white bg-dark">
+                        <div class="card-body">
+                            <img src="./images/post-avt.jpg" alt="" class="w-100 h-50">
+                            <h5 class="card-title">Java Script</h5>
+                        </div>
+                    </div>
+                    <div class="card-back bg-white">
+                        <div class="card-body">
+                            <p class="card-text">content on the back!</p>
+                            <a href="#" class="btn btn-outline-secondary">Action</a>
+                        </div>
                     </div>
                 </div>
+
             </div>
 
-            <div class="col col-sm">
-                <div class="card bg-info">
-                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Title</h5>
-                        <p class="card-text">Content</p>
+            <div class="item-col col col-md-3 col-sm-6">
+                <div class="card card-flip h-25">
+                    <div class="card-front text-white bg-dark">
+                        <div class="card-body">
+                            <img src="./images/post-avt.jpg" alt="" class="w-100 h-50">
+                            <h5 class="card-title">Wordpress</h5>
+                        </div>
+                    </div>
+                    <div class="card-back bg-white">
+                        <div class="card-body">
+                            <p class="card-text">content on the back!</p>
+                            <a href="#" class="btn btn-outline-secondary">Action</a>
+                        </div>
                     </div>
                 </div>
+
             </div>
-            <div class="col col-sm">
-                <div class="card bg-info">
-                    <img class="card-img-top" src="./images/post-avt.jpg" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Title</h5>
-                        <p class="card-text">Content</p>
+            <div class="item-col col col-md-3 col-sm-6">
+                <div class="card card-flip h-25">
+                    <div class="card-front text-white bg-dark">
+                        <div class="card-body">
+                            <img src="./images/post-avt.jpg" alt="" class="w-100 h-50">
+                            <h5 class="card-title">Marketing</h5>
+                        </div>
+                    </div>
+                    <div class="card-back bg-white">
+                        <div class="card-body">
+                            <p class="card-text"> content on the back!</p>
+                            <a href="#" class="btn btn-outline-secondary">Action</a>
+                        </div>
                     </div>
                 </div>
+
             </div>
 
         </div>
